Cleanup using Java 16